update start script

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "start:signal": "ng serve --project signal",
+    "start": "ng serve --project playground-signal",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
